# derin

./: .gitignore  .gitmodules  Cargo.toml  OBJECTIVES.md  README.md  derin_selector_sketch.rs
dat/: Cargo.toml
dat/examples/: skyline.rs
dat/src/: lib.rs
dct/: Cargo.toml
dct/src/: buttons.rs  color.rs  cursor.rs  events.rs  geometry.rs  hints.rs  layout.rs  lib.rs  macros.rs
derin/: Cargo.toml
derin/examples/: control_gallery.rs  counter.rs  custom_icon.rs  direct_render.rs  hello_world.rs
derin/src/: container.rs  gl_render.rs  glutin_window.rs  layout.rs  lib.rs  theme.rs  widgets.rs
derin/src/gl_render/: atlas.rs  font_cache.rs  mod.rs  translate.rs
derin/src/gl_render/translate/: image.rs  mod.rs  text.rs
derin/src/gl_render/translate/text/: glyph_layout.rs  shape_glyphs.rs
derin/src/widgets/: assistants.rs  button.rs  check_box.rs  clip.rs  direct_render.rs  edit_box.rs  group.rs  label.rs  mod.rs  progress_bar.rs  radio_buttons.rs  scroll_box.rs  slider.rs  tabs.rs
derin/src/widgets/assistants/: mod.rs  slider.rs  text_edit.rs  toggle_button.rs
derin_atlas/: Cargo.toml
derin_atlas/examples/: compete_random.rs  perimeter.rs  perimeter_random.rs  skyline.rs  skyline_random.rs
derin_atlas/src/: lib.rs  perimeter.rs  raw.rs  skyline.rs
derin_common_types/: Cargo.toml
derin_common_types/src/: buttons.rs  cursor.rs  layout.rs  lib.rs  macros.rs
derin_core/: Cargo.toml
derin_core/src/: action_bus.rs  bus.rs  event.rs  event_bubbler.rs  event_dispatcher.rs  event_loop_ops.rs  event_translator.rs  focus_tracker.rs  lib.rs  macros.rs  main.rs  mbseq.rs  message_bus.rs  meta_tracker.rs  offset_widget.rs  popup.rs  render.rs  test_helpers.rs  timer.rs  tree.rs  update_state.rs  virtual_widget_tree.rs  widget.rs  widget_traverser.rs  widget_tree.rs
derin_core/src/event_translator/: dispatcher.rs  mod.rs
derin_core/src/node_stack/: inner.rs  mod.rs
derin_core/src/tree/: dyn.rs  dynamic.rs  mod.rs
derin_core/src/widget/: dynamic.rs
derin_core/src/widget_stack/: inner.rs  mod.rs
derin_core/src/widget_traverser/: offset_widget_scan.rs  virtual_widget_tree.rs  widget_stack.rs
derin_display_engines/: Cargo.toml
derin_display_engines/src/: font_kit_face_manager.rs  gullery_display_engine.rs  layered_image_atlas.rs  lib.rs  path_image_manager.rs  rect_layout.rs  rect_render.rs  rect_to_triangles.rs  theme.rs
derin_display_engines/src/rect_layout/: image_slice.rs  text.rs  theme.rs
derin_display_engines/src/rect_layout/text/: shape_glyphs.rs
derin_display_engines/src/rect_render/: image_slice.rs  layout.rs  text.rs  theme.rs
derin_display_engines/src/rect_render/text/: shape_glyphs.rs
derin_layout_engine/: Cargo.toml
derin_layout_engine/src/: grid.rs  lib.rs
derin_macros/: Cargo.toml
derin_macros/src/: lib.rs
dle/: Cargo.toml
dle/src/: geometry.rs  grid.rs  hints.rs  layout.rs  lib.rs
dww/: Cargo.toml
dww/src/: hdc.rs  lib.rs  msg_queue.rs  notify.rs  ucs2.rs  user_msg.rs  vkey.rs
dww/src/gdi/: img.rs  mod.rs  text.rs  vs.rs
dww/src/gdi/img/: iter.rs  mod.rs
dww/src/hdc/: mod.rs  vs.rs
dww/src/msg/: mod.rs  notify.rs  queue.rs  user.rs
dww/src/window/: macros.rs  mod.rs  refs.rs  wrappers.rs
dww_macros/: Cargo.toml
dww_macros/src/: lib.rs
examples/: button.rs  control_gallery.rs  counter.rs  custom_icon.rs  direct_render.rs  render.rs
gl_raii/: Cargo.toml
gl_raii/src/: lib.rs
src/: container.rs  gl_render.rs  glutin_window.rs  layout.rs  lib.rs  theme.rs
src/draw/: font.rs  gl.rs  mod.rs  primitive.rs  primitives.rs
src/draw/gl/: internals.rs  mod.rs
src/gl_render/: atlas.rs  font_cache.rs  mod.rs
src/gl_render/translate/: image.rs  mod.rs  text.rs
src/native/: mod.rs
src/native/win32/: geometry.rs  mod.rs  toggle_cell.rs  wrapper.rs
src/native/win32/wrapper/: mcvec.rs  mod.rs  subclass.rs
src/shaders/: char_vertex.frag  char_vertex.geom  char_vertex.vert  color_passthrough.frag  colored_vertex.vert
src/ui/: image.rs  intrinsics.rs  layout.rs  mod.rs  widgets.rs
src/widgets/: assistants.rs  button.rs  check_box.rs  clip.rs  direct_render.rs  edit_box.rs  group.rs  label.rs  mod.rs  radio_buttons.rs  scroll_box.rs  slider.rs  tabs.rs
