[package]
authors = ["Osspial <osspial@gmail.com>"]
name = "derin"
version = "0.1.0"
[dependencies]
arrayvec = "0.4"
glutin = "0.11"
dat = {path = "./dat"}
glyphydog = {git = "https://github.com/Osspial/glyphydog.git"}

[dev-dependencies]
derin_macros = {path = "./derin_macros"}
png = "0.11"

[dependencies.cgmath]
branch = "prs_merged"
git = "https://github.com/Osspial/cgmath.git"

[dependencies.cgmath-geometry]
git = "https://github.com/Osspial/cgmath-geometry.git"

[dependencies.dct]
path = "./dct"

[dependencies.derin_core]
path = "./derin_core"

[dependencies.dle]
path = "./dle"

[dependencies.gl_raii]
git = "https://github.com/Osspial/gl_raii.git"

[dependencies.gl_raii_macros]
git = "https://github.com/Osspial/gl_raii.git"

[workspace]
members = ["./dat", "./dct", "./dle", "./dww", "./dww_macros", "./derin_macros", "./derin_core"]
