[package]
authors = ["Osspial <osspial@gmail.com>"]
name = "derin"
version = "0.1.0"
license = "Apache-2.0"

[dependencies]
arrayvec = "0.4"
glutin = "0.12"
derin_atlas = {path = "../derin_atlas"}
glyphydog = {git = "https://github.com/Osspial/glyphydog.git"}
itertools = "0.7"
unicode-segmentation = "1.2"
clipboard = "0.4"
png = "0.11"
parking_lot = "0.5"
lazy_static = "1"
cgmath-geometry = {git = "https://github.com/Osspial/cgmath-geometry.git"}
derin_common_types = {path = "../derin_common_types"}
derin_core = {path = "../derin_core"}
derin_layout_engine = {path = "../derin_layout_engine"}
gullery = {git = "https://github.com/Osspial/gullery.git"}
gullery_macros = {git = "https://github.com/Osspial/gullery.git"}

[dev-dependencies]
derin_macros = {path = "../derin_macros"}
