[package]
authors = ["Osspial <osspial@gmail.com>"]
name = "derin"
edition = "2018"
version = "0.1.0"
license = "MPL-2.0"
description = "A Derive-Based GUI Library for Rust"
documentation = "https://docs.rs/derin"
repository = "https://github.com/Osspial/derin"
readme = "../README.md"
keywords = ["gui", "desktop", "widgets", "ui"]
categories = ["gui"]

[dependencies]
arrayvec = "0.4"
glutin = "0.13"
derin_atlas = {path = "../derin_atlas"}
glyphydog = {git = "https://github.com/Osspial/glyphydog.git"}
clipboard = "0.4"
png = "0.11"
parking_lot = "0.5"
lazy_static = "1"
cgmath-geometry = {git = "https://github.com/Osspial/cgmath-geometry.git"}
derin_common_types = {path = "../derin_common_types"}
derin_core = {path = "../derin_core"}
derin_display_engines = {path = "../derin_display_engines"}
derin_layout_engine = {path = "../derin_layout_engine"}
gullery = {git = "https://github.com/Osspial/gullery.git"}
gullery_macros = {git = "https://github.com/Osspial/gullery.git"}

serde = { version = "1.0", features = ["serde_derive"] }

[dev-dependencies]
derin_macros = {path = "../derin_macros"}

[features]
derin-serde = ["cgmath-geometry/cgmath-serde", "derin_common_types/derin-serde"]
