[package]
name = "derin_common_types"
version = "0.1.0"
authors = ["Osspial <osspial@gmail.com>"]
license = "Apache-2.0"
description = "A set of types common between the Derin libraries"
documentation = "https://docs.rs/derin_common_types"
repository = "https://github.com/Osspial/derin"

[dependencies]
num-traits = "0.1"
cgmath-geometry = { git = "https://github.com/Osspial/cgmath-geometry.git" }
bitflags = "1.0"
