[package]
name = "derin_common_types"
edition = "2018"
version = "0.1.0"
authors = ["Osspial <osspial@gmail.com>"]
license = "MPL-2.0"
description = "A set of types common between the Derin libraries"
documentation = "https://docs.rs/derin_common_types"
repository = "https://github.com/Osspial/derin"

[dependencies]
num-traits = "0.1"
cgmath-geometry = { git = "https://github.com/Osspial/cgmath-geometry.git" }
bitflags = "1.0"

serde = { version = "1.0", features = ["serde_derive"], optional = true }

[features]
derin-serde = ["cgmath-geometry/cgmath-serde", "serde"]
