[package]
name = "derin_core"
edition = "2018"
version = "0.1.0"
authors = ["Osspial <osspial@gmail.com>"]
license = "Apache-2.0"
description = "Derin's core Event Loop"
documentation = "https://docs.rs/derin_core"
repository = "https://github.com/Osspial/derin"
keywords = ["gui", "widgets", "ui"]
categories = ["gui"]

[dependencies]
cgmath-geometry = { git = "https://github.com/Osspial/cgmath-geometry.git" }
derin_common_types = { path = "../derin_common_types" }
arrayvec = "0.4"
itertools = "0.7"
fnv = "1"
smallvec = {version = "0.6", features = ["std", "union"]}

[dev-dependencies]
indexmap = "1"
rand = "0.6"
