[package]
name = "derin_display_engines"
version = "0.1.0"
authors = ["Osspial <osspial@gmail.com>"]
edition = "2018"

[dependencies]
arrayvec = "0.4"
derin_core = {path = "../derin_core"}
derin_common_types = {path = "../derin_common_types"}
serde = {version = "1", features = ["derive"]}
cgmath-geometry = {git = "https://github.com/Osspial/cgmath-geometry.git"}
unicode-segmentation = "1.2"
itertools = "0.7"
xi-unicode = "0.1"

glutin = "0.22.0-alpha1"
gullery = {git = "https://github.com/Osspial/gullery.git" }
gullery_macros = {git = "https://github.com/Osspial/gullery.git" }
