[package]
name = "derin_layout_engine"
version = "0.1.0"
authors = ["Osspial <osspial@gmail.com>"]
license = "Apache-2.0"

[dependencies]
derin_common_types = {path = "../derin_common_types"}
cgmath-geometry = { git = "https://github.com/Osspial/cgmath-geometry.git" }
num-traits = "0.1"

[dev-dependencies]
quickcheck = "0.4"
