[package]
name = "dle"
version = "0.1.0"
authors = ["Osspial <osspial@gmail.com>"]

[dependencies]
dct = {path = "../dct"}
cgmath = {git = "https://github.com/Osspial/cgmath.git", branch = "prs_merged"}
rect-cgmath = {git = "https://github.com/Osspial/rect-cgmath.git"}
num-traits = "0.1"

[dev-dependencies]
quickcheck = "0.4"
