[package]
name = "dww"
version = "0.1.0"
authors = ["Osspial <osspial@gmail.com>"]

[dependencies]
winapi = {git = "https://github.com/Osspial/winapi-rs.git", branch= "derin_merged"}
user32-sys = {git = "https://github.com/Osspial/winapi-rs.git", branch= "derin_merged"}
kernel32-sys = {git = "https://github.com/Osspial/winapi-rs.git", branch= "derin_merged"}
comctl32-sys = {git = "https://github.com/Osspial/winapi-rs.git", branch= "derin_merged"}
gdi32-sys = {git = "https://github.com/Osspial/winapi-rs.git", branch= "derin_merged"}
uxtheme-sys = {git = "https://github.com/Osspial/winapi-rs.git", branch= "derin_merged"}
lazy_static = "0.2"
dct = {path = "../dct"}

[dev-dependencies]
quickcheck = "0.4"

[dev-dependencies.dww_macros]
path = "../dww_macros"
features = ["inside_dww"]
