[package]
name = "dww_macros"
version = "0.1.0"
authors = ["Osspial <osspial@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
syn = "0.11"
quote = "0.3"

[features]
# Feature flag to change the crate root when creating a message inside of the dww crate. There should
# be no reason for someone getting this crate off of crates.io to use this.
inside_dww = []
